--- a/web/src/index.css
+++ b/web/src/index.css
@@ -66,17 +66,16 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(112, 74, 33, 0.5);
+  background: #D2B48C;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(112, 74, 33, 0.7);
+  background: #B8860B;
 }
 
 /* Ensure scrollbar doesn't interfere with buttons */
@@ -88,12 +87,34 @@
   width: 12px;
 }
 
+/* .custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+} */
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #A0AEC0;
-  /* Thumb color */
-  border-radius: 6px;
+  background-color: #D2B48C;
+  /* Brown color */
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #B8860B;
+  /* Darker brown on hover */
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
   background: transparent;
+}
+
+.chat-container {
+  padding-left: 15px;
+  /* Adjust this value to your preference */
 }
