--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 @layer base {
   :root {
     --background: 39 36% 97%;
@@ -156,4 +159,17 @@
 
 .motion-div * {
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.font-daisii {
+  font-family: "Space Mono", serif;
+}
+
+.font-claude {
+  font-family: "Pridi", serif;
+}
+
+.font-titan {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
 }
