--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,8 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 
 @layer base {
@@ -166,10 +165,38 @@
 }
 
 .font-claude {
-  font-family: "Pridi", serif;
+  font-family: "Trirong", serif;
+  font-size: 16.5px;
 }
 
 .font-titan {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: "Readex Pro", sans-serif;
+}
 
+.bg-claude-user {
+  background-color: #1F1E1A;
+}
+
+.claude-user {
+  color: #1F1E1A;
+}
+
+.bg-claude-bot {
+  background-color: #363634;
+}
+
+.claude-text {
+  color: #DFDEDB;
+}
+
+.bg-claude-text {
+  background-color: #DFDEDB;
+}
+
+.bg-claude-background {
+  background-color: #2B2B28;
+}
+
+.daisii-text {
+  color: #1F1E1A
 }
